--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import "@/styles/global.css";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -6,9 +10,12 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Portfolio | Micaela Benitez</title>
 	</head>
-	<body>
+	<body class="bg-fondo bg-fixed min-h-screen relative overflow-x-hidden">
+		<div class="stars-layer layer-1"></div>
+		<div class="stars-layer layer-2"></div>
+		<div class="stars-layer layer-3"></div>
 		<slot />
 	</body>
 </html>
