--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,12 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 import Header from '@/sections/Header.astro';
+import Hero from '@/sections/Hero.astro';
 ---
 
 <Layout>
 	<Header />
+	<main class="max-w-7xl px-10 mx-auto">
+		<Hero />
+	</main>
 </Layout>
